style products changed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -795,9 +795,9 @@ body {
   border-radius: 100%;
 }
 
-/*.list-products {
+.list-products {
   cursor: pointer;
-}*/
+}
 
 
 /************* shops.html **************/
