--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,44 +2,34 @@ body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-/*************** *******************/ 
-
+/*************** *******************/
 #main-title:hover {
-  background-color: $primary-hover;
+  /*  background-color: $primary-hover;*/
   letter-spacing: 2px;
-  transition: all 0.5s ease 0s;
-}
-
+  transition: all 0.5s ease 0s; }
 
 .discription p {
   font-size: 18px;
-  font-family: sans-serif;
-}
+  font-family: sans-serif; }
 
 .details-modal > h1, p {
   display: flex;
   justify-content: center;
-  line-height: 85px;
-}
+  line-height: 85px; }
 
 .details-modal > img {
-  width: 100%;
-}
+  width: 100%; }
 
 .details-modal > p {
-  font-size: 20px;
-}
+  font-size: 20px; }
 
-.details-modal > a{
-
-display: flex;
- justify-content: center;
- font-size: 30px;
-}
+.details-modal > a {
+  display: flex;
+  justify-content: center;
+  font-size: 30px; }
 
 #last-img {
-  display: inline-block;
-}
+  display: inline-block; }
 
 #main-title {
   font-size: 50px; }
@@ -48,8 +38,12 @@ display: flex;
   background-color: #484a4c;
   opacity: 0.9; }
 
-  /************* **** ***** **********/
+.discription p {
+  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-style: italic;
+}
 
+/************* **** ***** **********/
 .intro-description {
   margin-bottom: 30px;
   font-size: 25px;
@@ -275,6 +269,7 @@ fieldset[disabled] .btn-xl.active {
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em; } }
 header {
+  opacity: 0.9;
   background-image: url("../img/header-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -782,46 +777,39 @@ body {
   webkit-tap-highlight-color: #fed136; }
 
 /*********products.html*************/
-
+/*body {
+  background-color: #F2F3AE;
+}*/
 .list-categories {
   margin-top: 130px; }
 
-
-
 .list-products {
-  margin-top: 62px;
-}
+  margin-top: 62px; }
+
 .products {
-  box-shadow:0 3px 10px;
- /* width: 220px;
-  height: 340px;*/
-}
+  box-shadow: 0px 0px 1px 0px;
+  border: 10px red; }
 
 @media (min-width: 692px) {
-.products {
-  width: 100%;
-  height: 600px;
-}
-
-
+  .products {
+    width: 100%;
+    height: 600px; } }
 @media (min-width: 892px) {
-.products {
-  width: 100%;
-  height: 450px;
-}
-
-
+  .products {
+    width: 100%;
+    height: 450px; } }
 .list-group {
-  margin-bottom: 50px;
-}
+  margin-bottom: 50px; }
 
 .products:hover {
-  -webkit-transform:scale(1.06);
-  -moz-transform:scale(1.06);
-  -ms-transform:scale(1.06);
-  -o-transform:scale(1.06);
-  transform:scale(1.06);
-}
+  -webkit-transform: scale(1.06);
+  -moz-transform: scale(1.06);
+  -ms-transform: scale(1.06);
+  -o-transform: scale(1.06);
+  transform: scale(1.03); }
+
+.products {
+  border: thin #FFFFFF; }
 
 select {
   width: 100%;
@@ -831,48 +819,62 @@ select {
   display: inline-block;
   font: inherit;
   line-height: 1.5em;
-  padding: 0.5em 3.5em 0.5em 1em;
-
-}
-
+  padding: 0.5em 3.5em 0.5em 1em; }
 
 .discount {
   margin-right: 10px;
   width: 70%;
   float: left;
-}
+  position: absolute;
+  z-index: 1; }
 
 .fish-shop {
   width: 80%;
-  /*height: 236px;*/
-  border-radius: 100%;
-}
+  border-radius: 100%; }
 
 .list-products {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .result-input {
   font-size: 30px;
   margin-top: 121px;
   display: flex;
-  justify-content: flex-start;
-
-}
+  justify-content: flex-start; }
 
 .lead1 {
   margin-top: 42px;
   font-size: 20px;
-  margin-bottom: 20px;
-}
+  margin-bottom: 20px; }
 
-/*.caption > p {
-  margin-right: 10px;
-}
-*/
+.product-img {
+  padding-top: 45px; }
+
+/******* line in price ****/
+.price-review {
+  position: relative;
+  display: inline-flex; }
+
+.price-review:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  right: 0;
+  border-top: 2px solid;
+  border-color: inherit;
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  transform: rotate(5deg); }
+
+/********** ******* ******* ***** ******/
+.products h3, h5 {
+  display: flex;
+  justify-content: center; }
+
 
 /************* shops.html **************/
-
 .shop-name {
   margin-top: 100px;
   height: 180px;
@@ -880,42 +882,39 @@ select {
   justify-content: center;
   text-align: center;
   flex-direction: column-reverse;
-  background-color: rgba(254, 202, 28, 0.9)
-}
+  background-color: rgba(254, 202, 28, 0.9); }
 
-.shop-name > p{
-  font-size: 30px;
-}
+.shop-name > p {
+  font-size: 30px; }
 
 .list-products-shop {
-  margin-top: 50px;
-}
+  margin-top: 50px; }
 
 /************** log in *************/
-
 @media (min-width: 768px) {
-    .omb_row-sm-offset-3 div:first-child[class*="col-"] {
-        margin-left: 25%;
-    }
-}
-
+  .omb_row-sm-offset-3 div:first-child[class*="col-"] {
+    margin-left: 25%; } }
 .omb_login .omb_authTitle {
-    text-align: center;
-  line-height: 300%;
-}
-  
-.omb_login .omb_socialButtons a {
-  color: white; // In yourUse @body-bg 
-  opacity:0.9;
-}
-.omb_login .omb_socialButtons a:hover {
-    color: white;
-  opacity:1;      
-}
-.omb_login .omb_socialButtons .omb_btn-facebook {background: #3b5998;}
-.omb_login .omb_socialButtons .omb_btn-twitter {background: #00aced;}
-.omb_login .omb_socialButtons .omb_btn-google {background: #c32f10;}
+  text-align: center;
+  line-height: 300%; }
 
+.omb_login .omb_socialButtons a {
+  color: white;
+  /*// In yourUse @body-bg */
+  opacity: 0.9; }
+
+.omb_login .omb_socialButtons a:hover {
+  color: white;
+  opacity: 1; }
+
+.omb_login .omb_socialButtons .omb_btn-facebook {
+  background: #3b5998; }
+
+.omb_login .omb_socialButtons .omb_btn-twitter {
+  background: #00aced; }
+
+.omb_login .omb_socialButtons .omb_btn-google {
+  background: #c32f10; }
 
 .omb_login .omb_loginOr {
   position: relative;
@@ -924,14 +923,14 @@ select {
   margin-top: 1em;
   margin-bottom: 1em;
   padding-top: 0.5em;
-  padding-bottom: 0.5em;
-}
+  padding-bottom: 0.5em; }
+
 .omb_login .omb_loginOr .omb_hrOr {
   background-color: #cdcdcd;
   height: 1px;
   margin-top: 0px !important;
-  margin-bottom: 0px !important;
-}
+  margin-bottom: 0px !important; }
+
 .omb_login .omb_loginOr .omb_spanOr {
   display: block;
   position: absolute;
@@ -940,35 +939,27 @@ select {
   margin-left: -1.5em;
   background-color: white;
   width: 3em;
-  text-align: center;
-}     
+  text-align: center; }
 
 .omb_login .omb_loginForm .input-group.i {
-  width: 2em;
-}
-.omb_login .omb_loginForm  .help-block {
-    color: red;
-}
+  width: 2em; }
 
-  
+.omb_login .omb_loginForm .help-block {
+  color: red; }
+
 @media (min-width: 768px) {
-    .omb_login .omb_forgotPwd {
-        text-align: right;
-    margin-top:10px;
-  }   
-}
-
+  .omb_login .omb_forgotPwd {
+    text-align: right;
+    margin-top: 10px; } }
 #login-btn {
   background-color: #3B5998;
-  border-color: #3B5998;
-}
+  border-color: #3B5998; }
 
 .omb_login {
   margin-top: 35px;
-  margin-bottom: 60px;
-}
+  margin-bottom: 60px; }
 
 #login-section {
-  margin-top: 80px;
-}
+  margin-top: 80px; }
 
+/*# sourceMappingURL=main.css.map */
