uploadProducts file added

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -962,4 +962,11 @@ select {
 #login-section {
   margin-top: 80px; }
 
+/************ Login - register **********/
+
+#login-register {
+  background-color: green;
+}
+
+
 /*# sourceMappingURL=main.css.map */
