--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -50,9 +50,9 @@
                                 <input type="password" class="form-control" name="password" placeholder="Password">
                             </div>
                             <span class="help-block"></span>
-                            <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit">Login</button><hr>
-                            <p>Do you not have account?</p>
-                            <button id="login-register href="/register" class="btn btn-lg btn-primary btn-block btn-second" type="submit">Register in here</button>
+                            <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit">Register</button><hr>
+                            <p>Do you already have an account?</p>
+                            <button id="login-register" href="/login" class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
                         </form>
                     </div>
                 </div>
