--- a/public/templates/includes/header.html
+++ b/public/templates/includes/header.html
@@ -21,7 +21,7 @@
                         <a class="page-scroll" href="#portfolio">Last Products </a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="login.html">Log In</a>
+                        <a class="page-scroll" ng-click="getLogin()">Log In</a>
                     </li>
                 </ul>
             </div>
