--- a/public/templates/products.html
+++ b/public/templates/products.html
@@ -1,131 +1,127 @@
-
-    <div class="container">
-        <div class="row">
-            <div class="list-categories col-md-3">
-              <div class="input-group">
+<div class="container">
+    <div class="row">
+        <div class="list-categories col-md-3">
+            <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search for..." ng-model="sometext">
-                  <span class="input-group-btn">
+                <span class="input-group-btn">
                     <button class="btn btn-default" type="button">Search</button>
                   </span>
-              </div>
-                <p class="lead1">Category</p>
-                <div class="list-group">
-                    <a href="#" class="list-group-item">Supermaket</a>
-                    <a href="#" class="list-group-item">Fish Shops</a>
-                    <a href="#" class="list-group-item">Bakery</a>
-                    <a href="#" class="list-group-item">Butchery</a>
-                </div>
-                <p class="lead1">Distance</p>
-                <select class="distance-select">
-                    <option>+ 1 km</option>
-                    <option>+ 2 km</option>
-                    <option>+ 3 km</option>
-                    <option>+ 5 km</option>
-                    <option>+ 10 km</option>
-                </select>
             </div>
-            <div class="col-md-9">
-                <p class="result-input">Searching for: {{sometext}}</p>
-                <div class="row list-products">
-                    <div class="col-sm-6  col-md-4 setborder" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">
-                        <div class="thumbnail products">
-                          <img class="discount" src="img/discount50.jpeg"></img>
-                            <img class="product-img" src="img/boqueron-fresco.jpg" alt="">
-                            <div class="caption">
-                                <h4 class="pull-right">12,49€</h4>
-                                <h4 class="price-review">24.99€</h4>
-                                <h3>Fresh Fish</h3>
-                                <p>Expiry at: 04/06/2017</p>
-                                <h5>Distance: 600m</h5>
-                                <p>Pescados Sepal S.L.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail products">
+            <p class="lead1">Category</p>
+            <div class="list-group">
+                <a href="#" class="list-group-item">Supermaket</a>
+                <a href="#" class="list-group-item">Fish Shops</a>
+                <a href="#" class="list-group-item">Bakery</a>
+                <a href="#" class="list-group-item">Butchery</a>
+            </div>
+            <p class="lead1">Distance</p>
+            <select class="distance-select">
+                <option>+ 1 km</option>
+                <option>+ 2 km</option>
+                <option>+ 3 km</option>
+                <option>+ 5 km</option>
+                <option>+ 10 km</option>
+            </select>
+        </div>
+        <div class="col-md-9">
+            <p class="result-input">Searching for: {{sometext}}</p>
+            <div class="row list-products">
+                <div class="col-sm-6  col-md-4 setborder" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">
+                    <div class="thumbnail products">
                         <img class="discount" src="img/discount50.jpeg"></img>
-                            <img class="product-img" src="img/ensalada.jpg" alt="">
-                            <div class="caption">
-                                <h4 class="pull-right">12,49€</h4>
-                                <h4 class="price-review">24.99€</h4>
-                                <h3>Fresh Salad</h3>
-                                <p>Expiry at: 04/06/2017</p>
-                                <h5>Distance: 600m</h5>
-                                <p>Pescados Sepal S.L.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail products">
-                        <img class="discount" src="img/discount50.jpeg"></img>
-                            <img class="product-img" src="img/pan-barra.jpg" alt="">
-                            <div class="caption">
-                                <h4 class="pull-right">12,49€</h4>
-                                <h4 class="price-review">24.99€</h4>
-                                <h3>Bread</h3>
-                                <p>Expiry at: 04/06/2017</p>
-                                <h5>Distance: 600m</h5>
-                                <p>Pescados Sepal S.L.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail products">
-                        <img class="discount" src="img/discount50.jpeg"></img>
-                            <img class="product-img" src="img/croissants.jpg" alt="">
-                            <div class="caption">
-                                <h4 class="pull-right">12,49€</h4>
-                                <h4 class="price-review">24.99€</h4>
-                                <h3>Croissants</h3>
-                                <p>Expiry at: 04/06/2017</p>
-                                <h5>Distance: 600m</h5>
-                                <p>Pescados Sepal S.L.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail products">
-                        <img class="discount" src="img/discount50.jpeg"></img>
-                            <img class="product-img" src="img/carrots.jpg" alt="">
-                            <div class="caption">
-                                <h4 class="pull-right">12,49€</h4>
-                                <h4 class="price-review">24.99€</h4>
-                                <h3>Carrots</h3>
-                                <p>Expiry at: 04/06/2017</p>
-                                <h5>Distance: 600m</h5>
-                                <p>Pescados Sepal S.L.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail products" data-toggle="#modal">
-                        <img class="discount" src="img/discount50.jpeg"></img>
-                            <img class="product-img" src="img/pollo-asado.jpg" alt="">
-                            <div class="caption">
-                                <h4 class="pull-right">12,49€</h4>
-                                <h4 class="price-review">24.99€</h4>
-                                <h3>Roasted Chicken</h3>
-                                <p>Expiry at: 04/06/2017</p>
-                                <h5>Distance: 600m</h5>
-                                <p>Pescados Sepal S.L.</p>
-                            </div>
+                        <img class="product-img" src="img/boqueron-fresco.jpg" alt="">
+                        <div class="caption">
+                            <h4 class="pull-right">12,49€</h4>
+                            <h4 class="price-review">24.99€</h4>
+                            <h3>Fresh Fish</h3>
+                            <p>Expiry at: 04/06/2017</p>
+                            <h5>Distance: 600m</h5>
+                            <p>Pescados Sepal S.L.</p>
                         </div>
                     </div>
                 </div>
-                <!--Modal content  -->
-                <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-                    <div class="modal-dialog modal-lg" role="document">
-                        <div class="modal-content details-modal">
-                            <h1>Pescados Sepal S.L</h1>
-                            <p>Rambla de la Marina, 206, 08907 Hospitalet de Llobregat (L'), Barcelona</p>
-                                <a ng-click="getShop()" type="submit" class="page-scroll btn btn-xl"> See all products</a>
-                            <img src="img/mapa.png">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
+                        <img class="product-img" src="img/ensalada.jpg" alt="">
+                        <div class="caption">
+                            <h4 class="pull-right">12,49€</h4>
+                            <h4 class="price-review">24.99€</h4>
+                            <h3>Fresh Salad</h3>
+                            <p>Expiry at: 04/06/2017</p>
+                            <h5>Distance: 600m</h5>
+                            <p>Pescados Sepal S.L.</p>
                         </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
+                        <img class="product-img" src="img/pan-barra.jpg" alt="">
+                        <div class="caption">
+                            <h4 class="pull-right">12,49€</h4>
+                            <h4 class="price-review">24.99€</h4>
+                            <h3>Bread</h3>
+                            <p>Expiry at: 04/06/2017</p>
+                            <h5>Distance: 600m</h5>
+                            <p>Pescados Sepal S.L.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
+                        <img class="product-img" src="img/croissants.jpg" alt="">
+                        <div class="caption">
+                            <h4 class="pull-right">12,49€</h4>
+                            <h4 class="price-review">24.99€</h4>
+                            <h3>Croissants</h3>
+                            <p>Expiry at: 04/06/2017</p>
+                            <h5>Distance: 600m</h5>
+                            <p>Pescados Sepal S.L.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail products">
+                        <img class="discount" src="img/discount50.jpeg"></img>
+                        <img class="product-img" src="img/carrots.jpg" alt="">
+                        <div class="caption">
+                            <h4 class="pull-right">12,49€</h4>
+                            <h4 class="price-review">24.99€</h4>
+                            <h3>Carrots</h3>
+                            <p>Expiry at: 04/06/2017</p>
+                            <h5>Distance: 600m</h5>
+                            <p>Pescados Sepal S.L.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail products" data-toggle="#modal">
+                        <img class="discount" src="img/discount50.jpeg"></img>
+                        <img class="product-img" src="img/pollo-asado.jpg" alt="">
+                        <div class="caption">
+                            <h4 class="pull-right">12,49€</h4>
+                            <h4 class="price-review">24.99€</h4>
+                            <h3>Roasted Chicken</h3>
+                            <p>Expiry at: 04/06/2017</p>
+                            <h5>Distance: 600m</h5>
+                            <p>Pescados Sepal S.L.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Modal content  -->
+            <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content details-modal">
+                        <h1>Pescados Sepal S.L</h1>
+                        <p>Rambla de la Marina, 206, 08907 Hospitalet de Llobregat (L'), Barcelona</p>
+                        <a ng-click="getShop()" type="submit" data-dismiss="modal" class="page-scroll btn btn-xl"> See all products</a>
+                        <img src="img/mapa.png">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
-</html>
-</body>
+</div>
