--- a/client/templates/shops.html
+++ b/client/templates/shops.html
@@ -8,7 +8,7 @@
                 <img class="discount" src="img/discount50.jpeg"></img>
                 <img src="img/boqueron-fresco.jpg" alt="">
                 <div class="caption">
-                    <h4 class="pull-right">$24.99</h4>
+                    <h4 class="pull-right">{{products.price}}</h4>
                     <h4><a href="#">Fresh fish</a>
                                 </h4>
                     <p>Date of Expiry: 04/06/2017 <a target="_blank" href="http://www.bootsnipp.com">Pescados Sepal SL</a>.</p>
