--- a/public/css/main.css
+++ b/public/css/main.css
@@ -948,9 +948,5 @@ select {
 .list-products-shop {
   margin-top: 50px; }
 
-/************ uploadProducts.html ***********/
-.index {
-  margin-top: 150px;
-}
-
-/******** ********* ****************/
+.xsdasf {
+  background-color: black; }
