modal fixed and moved for include folder

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -949,7 +949,7 @@ select {
   margin-top: 50px; }
 
 /************ uploadProducts.html ***********/
-.index {
+.form-index{
   margin-top: 150px;
 }
 
