--- a/client/templates/uploadProducts.html
+++ b/client/templates/uploadProducts.html
@@ -1,27 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" ng-App="zeroWasteApp">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>zero waste</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-    <!-- Theme CSS -->
-    <link href="css/main.css" rel="stylesheet" type="text/css">
-</head>
-
-<body id="page-top" class="index">
-    <div class="container">
+    <div class="container form-index">
         <div class="row">
             <div class="panel-group">
                 <div class="panel panel-default">
@@ -29,6 +7,10 @@
                     <div class="panel-body">
                         <form ng-submit="uploadProducts()" role="form" id="registForm">
                             <!-- <input type="hidden" name="contentCount" value="1" /> -->
+                            <div class="form-group">
+                                <label for="shopName">Shop Name</label>
+                                <input ng-model="shop" name="shopName" type="text" class="form-control" id="input-code">
+                            </div>
                             <div class="form-group">
                                 <label for="nameProduct">Product Name</label>
                                 <input ng-model="name" name="nameProduct" type="text" class="form-control" id="input-code">
@@ -70,27 +52,3 @@
             </div>
         </div>
     </div>
-    <!--  Angular -->
-    <!--  Angular -->
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-    <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
-    <!-- MAIN ANGULAR -->
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/config.js"></script>
-    <!-- CONTROLLERS -->
-    <script type="text/javascript" src="js/controllers/homeController.js"></script>
-    <script type="text/javascript" src="js/controllers/productsController.js"></script>
-    <script type="text/javascript" src="js/controllers/headerController.js"></script>
-    <script type="text/javascript" src="js/controllers/uploadController.js"></script>
-    <!-- SERVICES/FACTORY -->
-    <!-- SERVICES/FACTORY -->
-    <script type="text/javascript" src="js/services/ApiService.js"></script>
-</body>
-
-</html>
