--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -5,46 +5,19 @@
   margin-top: 130px;
 }
 
-.list-products {
-  margin-top: 62px;
-}
+// .list-products {
+//   margin-top: 62px;
+// }
 
-.products {
-  box-shadow: 0px 0px 1px 0px;
-  border: 10px red;
-}
-
-@media (min-width: 692px) {
-.products {
-  width: 100%;
-  height: 600px;
-}
-}
-
-
-@media (min-width: 892px) {
-.products {
-  width: 100%;
-  height: 450px;
-}
-}
-
+// .products {
+//   box-shadow: 0px 0px 1px 0px;
+//   border: 10px red;
+// }
 
 .list-group {
   margin-bottom: 50px;
 }
 
-.products:hover {
-  -webkit-transform:scale(1.06);
-  -moz-transform:scale(1.06);
-  -ms-transform:scale(1.06);
-  -o-transform:scale(1.06);
-  transform:scale(1.03);
-}
-
-.products {
-  border: thin #FFFFFF;
-}
 
 select {
   width: 100%;
@@ -59,22 +32,9 @@ select {
 }
 
 
-.discount {
-  margin-right: 10px;
-  width: 70%;
-  float: left;
-  position: absolute;
-  z-index: 1;
-}
-
 .fish-shop {
   width: 80%;
   border-radius: 100%;
-}
-
-
-.list-products {
-  cursor: pointer;
 }
 
 .result-input {
@@ -88,11 +48,6 @@ select {
   margin-top: 42px;
   font-size: 20px;
   margin-bottom: 20px;
-}
-
-.product-img {
-  padding-top: 45px;
-
 }
 
 
@@ -119,7 +74,68 @@ select {
 
 /********** ******* ******* ***** ******/
 
-.products h3, h5 {
-  display: flex;
-  justify-content: center;
+
+#products {
+  .list-products {
+    padding-left:50px;
+    display: flex;
+    flex-wrap: wrap;
+    li {
+      width: 300px;
+      margin-right: 10px;
+      .thumbnail {
+        height: 400px;
+        .container-image {
+          position: relative;
+          cursor: pointer;
+          &:hover {
+            .cover-hover {
+              display: flex;
+              justify-content: center;
+              align-items:center;
+            }
+
+          }
+        }
+
+        .cover-hover {
+          width: 100%;
+          height: 200px;
+          background: rgba(0,0,0,.5);
+          position: absolute;
+          top:0;
+          display:none;
+          a {
+            color: white;
+            font-size: 30px;
+          }
+        }
+        .caption {
+          p:first-of-type {
+            // height: 75px;
+            overflow: hidden;
+          }
+
+        }
+      }
+    }
+  }
 }
+
+.list-categories {
+  padding-left: 60px;
+}
+
+.img-bg{
+  height: 200px;
+  background-size: cover;
+}
+
+
+// .discount {
+//   margin-right: 10px;
+//   width: 70%;
+//   float: left;
+//   position: absolute;
+//   z-index: 1;
+// }
