filter price added

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -924,6 +924,9 @@ select {
   height: 200px;
   background-size: cover; }
 
+#name, #distance {
+  text-align: center; }
+
 /****** shops.html *******/
 .shop-name {
   margin-top: 100px;
