--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -37,11 +37,11 @@
                                     </div>
                               </div>
                                 <div class="caption">
-                                <h4 class="pull-right">now {{ product.price*(1-(product.discount/100))}}€</h4>
+                                <h4 class="pull-right">now {{ product.price*(1-(product.discount/100)) | number: 2}}€</h4>
                                     <h4 class="price-review">{{product.price}}€</h4>
-                                    <h5> {{ product.name }}</h5>
+                                    <h5 id="name"> {{ product.name }}</h5>
                                     <p>Expery at: {{ product.experyAt}}</p>
-                                    <h6>Distance: 600m</h6>
+                                    <h6 id="distance">Distance: 600m</h6>
                                     <p>{{ product.shop }}</p>
                                     <p>{{ product.category }}</p>
                                     <p><a href="#" class="btn btn-danger" role="button" ng-click="removeProduct(product._id)">Remove</a></p>
