--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -131,11 +131,6 @@ select {
   background-size: cover;
 }
 
-
-// .discount {
-//   margin-right: 10px;
-//   width: 70%;
-//   float: left;
-//   position: absolute;
-//   z-index: 1;
-// }
+#name, #distance {
+  text-align: center;
+}
