--- a/client/templates/includes/modal.html
+++ b/client/templates/includes/modal.html
@@ -1,4 +1,3 @@
-
 <div class="modal fade bs-example-modal-lg" id="modalProduct_{{product._id}}" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content details-modal">
@@ -6,17 +5,17 @@
             <p>{{ product.name }}</p>
             <a ng-click="getShop()" type="submit" data-dismiss="modal" class="page-scroll btn btn-xl"> See all products</a>
             <!-- <img src="img/mapa.png"> -->
-             <ng-map zoom="14" center="[43.07493, -89.381388]">
-             <!-- <marker icon="img/icon-marker.png" animation="DROP" position=""></marker> -->
-              </ng-map>
+            <div id="map">
+                <ng-map id="main-map" center="41.381789, 2.172363" zoom="15"></ng-map>
             </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
+            <!-- <marker icon="img/icon-marker.png" animation="DROP" position=""></marker> -->
         </div>
+        </li>
+        </ul>
     </div>
+</div>
+</div>
+</section>
+</div>
+</div>
 </div>
