--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -15,13 +15,13 @@
                         <a class="page-scroll" href="#main-discription">Why Save food</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Shops</a>
+                        <a class="page-scroll" href="#!/uploadShop">Add Shops</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Last Products </a>
+                        <a class="page-scroll" href="#!/uploadProducts">Add Products </a>
                     </li>
                     <li>
-                        <a class="page-scroll" ng-click="getLogin()">Log In</a>
+                        <a class="page-scroll" href="#!/login">Log In</a>
                     </li>
                 </ul>
             </div>
